ok seems good now i can run demo client by script on droplet